[gd_scene load_steps=8 format=3 uid="uid://bq7rsfk2882dk"]

[ext_resource type="Script" uid="uid://c7lv65n5b26lm" path="res://Scripts/InventoryUI.gd" id="1_xufhh"]
[ext_resource type="PackedScene" uid="uid://dscr7trc60aj5" path="res://Player.tscn" id="2_la3np"]
[ext_resource type="Resource" uid="uid://dgl7nkagg2xxu" path="res://DefaultPlayerData.tres" id="3_72myj"]
[ext_resource type="Resource" uid="uid://cxwt2wwemtkaa" path="res://InventoryTest.tres" id="4_wesl3"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_la3np"]

[sub_resource type="Sky" id="Sky_7cfyf"]
sky_material = SubResource("ProceduralSkyMaterial_la3np")

[sub_resource type="Environment" id="Environment_la3np"]
background_mode = 2
sky = SubResource("Sky_7cfyf")
ambient_light_color = Color(0.70380783, 0.70380783, 0.70380783, 1)

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_xufhh")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.23921569, 0.20784314, 0.16470589, 1)

[node name="MainHBox" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharacterPanel" type="VBoxContainer" parent="MainHBox"]
layout_mode = 2
size_flags_vertical = 0

[node name="ViewportContainer" type="SubViewportContainer" parent="MainHBox/CharacterPanel"]
layout_mode = 2

[node name="CharacterViewport" type="SubViewport" parent="MainHBox/CharacterPanel/ViewportContainer"]
own_world_3d = true
transparent_bg = true
handle_input_locally = false
size = Vector2i(300, 500)
render_target_update_mode = 4

[node name="Player" parent="MainHBox/CharacterPanel/ViewportContainer/CharacterViewport" instance=ExtResource("2_la3np")]
player_data = ExtResource("3_72myj")
inventory = ExtResource("4_wesl3")

[node name="Camera3D" type="Camera3D" parent="MainHBox/CharacterPanel/ViewportContainer/CharacterViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.2098231, 2.3960214)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="MainHBox/CharacterPanel/ViewportContainer/CharacterViewport"]
transform = Transform3D(1, 0, 0, 0, 0.0967491, 0.9953088, 0, -0.9953088, 0.0967491, 0, 4.152955, 0.41815925)
sky_mode = 1

[node name="WorldEnvironment" type="WorldEnvironment" parent="MainHBox/CharacterPanel/ViewportContainer/CharacterViewport"]
environment = SubResource("Environment_la3np")

[node name="ConsumablesBox" type="HBoxContainer" parent="MainHBox/CharacterPanel"]
layout_mode = 2
theme_override_constants/separation = 20
alignment = 1

[node name="PotionSlot" type="TextureButton" parent="MainHBox/CharacterPanel/ConsumablesBox"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="FoodSlot" type="TextureButton" parent="MainHBox/CharacterPanel/ConsumablesBox"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="EquipmentPanel" type="VBoxContainer" parent="MainHBox"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="HelmetSlot" type="TextureButton" parent="MainHBox/EquipmentPanel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="ChestSlot" type="TextureButton" parent="MainHBox/EquipmentPanel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="GlovesSlot" type="TextureButton" parent="MainHBox/EquipmentPanel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="PantsSlot" type="TextureButton" parent="MainHBox/EquipmentPanel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="BootsSlot" type="TextureButton" parent="MainHBox/EquipmentPanel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="WeaponSlot" type="TextureButton" parent="MainHBox/EquipmentPanel"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2

[node name="InventoryGrid" type="GridContainer" parent="MainHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/h_separation = 20
theme_override_constants/v_separation = 20
columns = 9
